Folder organization in CMake

--- a/src/opiform/CMakeLists.txt
+++ b/src/opiform/CMakeLists.txt
@@ -1,15 +1,17 @@
-PROJECT(opiform)
-
 FILE(GLOB_RECURSE srcs ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 FILE(GLOB_RECURSE hdrs ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 
 ADD_LIBRARY(opiform ${srcs} ${hdrs})
 
+FILE(GLOB_RECURSE files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+    "${CMAKE_SOURCE_DIR}/opiform/*.h" "${CMAKE_SOURCE_DIR}/opiform/*.cpp"
+)
+
 FILE(GLOB_RECURSE files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${hdrs})
 
 foreach(f ${files})
 	get_filename_component(p ${f} PATH)
-	install(FILES ${f} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${p})
+	install(FILES ${f} DESTINATION ${PROJECT_INSTALL_INCLUDE_DIR}/${p})
 endforeach()
 
 INSTALL(TARGETS opiform 
@@ -18,4 +20,8 @@ INSTALL(TARGETS opiform
 	ARCHIVE DESTINATION lib
 )
 
-SET_PROPERTY(TARGET opiform PROPERTY FOLDER "Dev")
+SET_PROPERTY(TARGET opiform PROPERTY FOLDER "Library")
+
+FILE(GLOB_RECURSE files_hierarchy "${CMAKE_SOURCE_DIR}/opiform/*.h" "${CMAKE_SOURCE_DIR}/opiform/*.cpp")
+
+organize_project_hierarchy(${files_hierarchy})
