--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,5 +1,3 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
-
 PROJECT(tests)
 
 INCLUDE_DIRECTORIES(
@@ -14,4 +12,4 @@ TARGET_LINK_LIBRARIES(tests
 	opiform
 )
 
-SET_PROPERTY(TARGET tests PROPERTY FOLDER "Testing")
+SET_PROPERTY(TARGET tests PROPERTY FOLDER "Executable")
