--- a/src/demo/CMakeLists.txt
+++ b/src/demo/CMakeLists.txt
@@ -1,5 +1,3 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
-
 PROJECT(demo)
 
 INCLUDE_DIRECTORIES(
@@ -14,4 +12,4 @@ TARGET_LINK_LIBRARIES(demo
 	opiform
 )
 
-SET_PROPERTY(TARGET demo PROPERTY FOLDER "Demo")
+SET_PROPERTY(TARGET demo PROPERTY FOLDER "Executable")
