--- a/src/opiform/CMakeLists.txt
+++ b/src/opiform/CMakeLists.txt
@@ -7,10 +7,9 @@ FILE(GLOB_RECURSE files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     "${CMAKE_SOURCE_DIR}/opiform/*.h" "${CMAKE_SOURCE_DIR}/opiform/*.cpp"
 )
 
-FILE(GLOB_RECURSE files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${hdrs})
-
-foreach(f ${files})
-	get_filename_component(p ${f} PATH)
+foreach(f ${hdrs})
+	file(RELATIVE_PATH fr ${CMAKE_CURRENT_SOURCE_DIR} ${f})
+	get_filename_component(p ${fr} PATH)
 	install(FILES ${f} DESTINATION ${PROJECT_INSTALL_INCLUDE_DIR}/${p})
 endforeach()
 
@@ -22,5 +21,5 @@ INSTALL(TARGETS opiform
 
 SET_PROPERTY(TARGET opiform PROPERTY FOLDER "Library")
 
-set(files_hierarchy ${hdrs} ${srcs})
-organize_project_hierarchy(${files_hierarchy})
+set(files ${srcs} ${hdrs})
+organize_project_hierarchy(${files})
